--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,11 +6,11 @@ androidx-ui-tooling = "1.8.3"
 androidx-viewmodelCompose = "2.9.1"
 coil = "3.3.0"
 compose-multiplatform = "1.8.2"
-kmpObservableViewmodel = "1.0.1"
+kmpObservableViewmodel = "1.0.0-BETA-12"
 orbiteViewmodel = "10.0.0"
 kmpNativeCoroutines = "1.0.0-ALPHA-45"
 koin = "4.1.0"
-kotlin = "2.3.0"
+kotlin = "2.2.0"
 kotlinx-serialization = "1.8.1"
 ksp = "2.2.0-2.0.2"
 ktor = "3.1.3"
